--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- 頁首區塊 -->
     <header>
       <h1>汽車刊登</h1>
-      <p>最新汽車資訊，歡迎瀏覽</p>
+      <p>最新二手汽車資訊，歡迎瀏覽</p>
     </header>
     
     <!-- 汽車列表區塊 -->
@@ -86,7 +86,9 @@
           <h2>BMW 435</h2>
           <p>年份：2015</p>
           <p class="price">$750,000</p>
-          <p>描述：這是一台保養良好的 BMW，前任車主為新竹科技新貴。</p>
+          <p>描述：這是一台保養良好的BMW，前任車主為新竹科技新貴，因人生另有規劃，忍痛換車</p>
+          <p>配備：電動天窗、照地燈、電摺後照鏡、魚眼頭燈、環景、倒車雷達</p>
+          <p>備註：喜歡可議價，歡迎新竹鄉親朋友前來鑑賞
         </div>
       </div>
     </section>
