--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div class="container">
     <!-- 頁首區塊 -->
     <header>
-      <h1>汽車刊登</h1>
+      <h1>雄哥本人汽車親自刊登</h1>
       <p>最新二手汽車資訊，歡迎瀏覽</p>
     </header>
     
