--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <p class="price">$750,000</p>
           <p>描述：這是一台保養良好的BMW，前任車主為新竹科技新貴，因人生另有規劃，忍痛換車</p>
           <p>配備：電動天窗、照地燈、電摺後照鏡、魚眼頭燈、環景、倒車雷達</p>
-          <p>備註：喜歡可議價，歡迎新竹鄉親朋友前來鑑賞了
+          <p>備註：喜歡可議價，歡迎新竹鄉親朋友前來鑑賞
         </div>
       </div>
     </section>
