--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
           <p>備註：喜歡可議價，歡迎新竹鄉親朋友前來鑑賞
         </div>
       </div>
+      <!-- 第二筆人員資料 -->
+      <div class="car-item">
+        <img src="https://i.ibb.co/DT0gqGt/雄哥.png" alt="雄哥本人">
+        <div class="car-info">
+        </div>
+      </div>
     </section>
   </div>
 </body>
