--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
       <!-- 第二筆人員資料 -->
       <div class="car-item">
-        <img src="https://i.ibb.co/DT0gqGt/雄哥.png" alt="雄哥本人">
+        <img src="https://i.ibb.co/DT0gqGt/雄哥.jpg" alt="雄哥本人">
         <div class="car-info">
         </div>
       </div>
